--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,12 @@
 <resources>
     <string name="app_name">GSB</string>
     <string name="tvTitre">GSB Recherche</string>
+    <string name="btnDepar">Voir les départements</string>
+    <string name="btnMedDepar">Voir les médecins par départements</string>
+    <string name="btnNomMed">Recherchez un médecin par nom</string>
+    <string name="voir_les_medecins_dep">Voir les médecins d\'un département</string>
+    <string name="rechercher">Rechercher</string>
+    <string name="entrez_num_dep">Entrez numéro de département</string>
+    <string name="liste_des_dep">Liste des départements comportnant un médecin</string>
+    <string name="entrez_nom_med">Entrez le nom d\'un médecin</string>
 </resources>
