--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="entrez_num_dep">Entrez numéro de département</string>
     <string name="liste_des_dep">Liste des départements comportant un médecin</string>
     <string name="entrez_nom_med">Entrez le nom d\'un médecin</string>
+    <string name="coefficient_de_notori_t">Coefficient\nde notoriété</string>
 </resources>
